--- a/index.html
+++ b/index.html
@@ -306,6 +306,7 @@
  </div>
  <pre>   </pre>
  <pre>   <a href="https://discord.gg/fp3j3ayz7F"><span style="font-weight: bold;text-shadow: 0 0 5px hwb(290 0% 0%);">Discord</span> </a>
+ <pre>   <a href="killa.lol/Credits"><span style="font-weight: bold;text-shadow: 0 0 5px hwb(290 0% 0%);">Discord</span> </a>
  </pre>
  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
  <style>
