--- a/members/brad.html
+++ b/members/brad.html
@@ -97,7 +97,7 @@
       });
       document.getElementById('site').hidden=true
       function playAudio() {
-          myAudio = new Audio('songg.mp3'); 
+          myAudio = new Audio('brads.mp3'); 
           if (typeof myAudio.loop == 'boolean')
           {
               myAudio.loop = true;
