--- a/index.html
+++ b/index.html
@@ -273,24 +273,24 @@
  <body onload="document.body.style.opacity='1'">
  <div class="center">
  <pre style="font-weight: bold;text-shadow: 0 0 5px hwb(0 27% 73%);">
-⠄⠄⠄⠄⠄⠄⠄⠄⣀⣤⡴⠶⠟⠛⠛⠛⠛⠻⠶⢦⣤⣀⠄⠄⠄⠄⠄⠄⠄⠄
-⠄⠄⠄⠄⠄⣠⣴⡟⠋⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠈⠙⢻⣦⣄⠄⠄⠄⠄⠄
-⠄⠄⠄⣠⡾⠋⠈⣿⣶⣄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣠⣶⣿⠁⠙⢷⣄⠄⠄⠄
-⠄⠄⣴⠏⠄⠄⠄⠸⣇⠉⠻⣦⣀⠄⠄⠄⠄⣀⣴⠟⠉⣸⠇⠄⠄⠄⠹⣦⠄⠄
-⠄⣼⠏⠄⠄⠄⠄⠄⢻⡆⠄⠄⠙⠷⣦⣴⠾⠋⠄⠄⢰⡟⠄⠄⠄⠄⠄⠹⣧⠄
-⢰⡏⠄⠄⠄⠄⠄⠄⠈⣷⠄⢀⣤⡾⠋⠙⢷⣤⡀⠄⣾⠁⠄⠄⠄⠄⠄⠄⢹⡆
-⣿⠁⠄⠄⠄⠄⠄⠄⠄⣸⣷⠛⠁⠄⠄⠄⠄⠈⠛⣾⣇⠄⠄⠄⠄⠄⠄⠄⠄⣿
-⣿⠄⠄⠄⠄⠄⣠⣴⠟⠉⢻⡄⠄ KILLA ⠄⣾⡟⠉⠻⣦⣄⠄⠄⠄⠄⣿
-⣿⡀⠄⢀⣴⠞⠋⠄⠄⠄⠈⣷⡀⡀⡀⡀⡀⡀⡀⣾⠁⠄⠄⠄⠙⠳⣦⡀⡀⣿
-⠸⣧⠾⠿⠷⠶⠶⠶⠶⠶⠶⢾⣷⠶⠶⠶⠶⣾⡷⠶⠶⠶⠶⠶⠶⠾⠿⠷⣼⠇
-⠄⢻⣆⠄⠄⠄⠄⠄⠄⠄⠄⠄⢿⡄⠄⠄⢠⡿⠄⠄⠄⠄⠄⠄⠄⠄⠄⣰⡟⠄
-⠄⠄⠻⣆⠄⠄⠄⠄⠄⠄⠄⠄⠘⣷⠄⠄⣾⠃⠄⠄⠄⠄⠄⠄⠄⠄⣰⠟⠄⠄
-⠄⠄⠄⠙⢷⣄⠄⠄⠄⠄⠄⠄⠄⢹⣇⣸⡏⠄⠄⠄⠄⠄⠄⠄⣠⡾⠋⠄⠄⠄
-⠄⠄⠄⠄⠄⠙⠳⣦⣄⡀⠄⠄⠄⠄⢿⡿⠄⠄⠄⠄⢀⣠⣴⠞⠋⠄⠄⠄⠄⠄
-⠄⠄⠄⠄⠄⠄⠄⠄⠉⠛⠳⠶⣦⣤⣼⣧⣤⣴⠶⠞⠛⠉⠄⠄⠄⠄⠄⠄⠄⠄
- <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 27% 73%); text-align: center;"><a href="brad.html">    ⡀⡀⡀  Killa Brad</span></a> <a>⡀</a> <a href="salmon.html">Killa Salmon ⡀⡀⡀</span></a>
- <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 27% 73%); text-align: center;"><a href="https://en.wikipedia.org/wiki/Cock_and_ball_torture">    ⡀⡀⡀  Killa Zok</span></a>  <a>⡀</a> <a href="https://linktr.ee/crashtheskyline">Killa Felony  ⡀ ⡀</span></a>
- <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 27% 73%); text-align: center;"><a href="https://linktr.ee/killazate">     ⡀ Killa Zate</span></a> <a>⡀</a> <a href="https://killa.lol">Killa Slammed ⡀</span></a> 
+  ⠄⠄⠄⠄⠄⠄⠄⠄⣀⣤⡴⠶⠟⠛⠛⠛⠛⠻⠶⢦⣤⣀⠄⠄⠄⠄⠄⠄⠄⠄
+  ⠄⠄⠄⠄⠄⣠⣴⡟⠋⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠈⠙⢻⣦⣄⠄⠄⠄⠄⠄
+  ⠄⠄⠄⣠⡾⠋⠈⣿⣶⣄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣠⣶⣿⠁⠙⢷⣄⠄⠄⠄
+  ⠄⠄⣴⠏⠄⠄⠄⠸⣇⠉⠻⣦⣀⠄⠄⠄⠄⣀⣴⠟⠉⣸⠇⠄⠄⠄⠹⣦⠄⠄
+  ⠄⣼⠏⠄⠄⠄⠄⠄⢻⡆⠄⠄⠙⠷⣦⣴⠾⠋⠄⠄⢰⡟⠄⠄⠄⠄⠄⠹⣧⠄
+  ⢰⡏⠄⠄⠄⠄⠄⠄⠈⣷⠄⢀⣤⡾⠋⠙⢷⣤⡀⠄⣾⠁⠄⠄⠄⠄⠄⠄⢹⡆
+  ⣿⠁⠄⠄⠄⠄⠄⠄⠄⣸⣷⠛⠁⠄⠄⠄⠄⠈⠛⣾⣇⠄⠄⠄⠄⠄⠄⠄⠄⣿
+  ⣿⠄⠄⠄⠄⠄⣠⣴⠟⠉⢻⡄⠄ KILLA ⠄⣾⡟⠉⠻⣦⣄⠄⠄⠄⠄⣿
+  ⣿⡀⠄⢀⣴⠞⠋⠄⠄⠄⠈⣷⡀⡀⡀⡀⡀⡀⡀⣾⠁⠄⠄⠄⠙⠳⣦⡀⡀⣿
+ ⠸⣧⠾⠿⠷⠶⠶⠶⠶⠶⠶⢾⣷⠶⠶⠶⠶⣾⡷⠶⠶⠶⠶⠶⠶⠾⠿⠷⣼⠇
+  ⠄⢻⣆⠄⠄⠄⠄⠄⠄⠄⠄⠄⢿⡄⠄⠄⢠⡿⠄⠄⠄⠄⠄⠄⠄⠄⠄⣰⡟⠄
+  ⠄⠄⠻⣆⠄⠄⠄⠄⠄⠄⠄⠄⠘⣷⠄⠄⣾⠃⠄⠄⠄⠄⠄⠄⠄⠄⣰⠟⠄⠄
+  ⠄⠄⠄⠙⢷⣄⠄⠄⠄⠄⠄⠄⠄⢹⣇⣸⡏⠄⠄⠄⠄⠄⠄⠄⣠⡾⠋⠄⠄⠄
+  ⠄⠄⠄⠄⠄⠙⠳⣦⣄⡀⠄⠄⠄⠄⢿⡿⠄⠄⠄⠄⢀⣠⣴⠞⠋⠄⠄⠄⠄⠄
+  ⠄⠄⠄⠄⠄⠄⠄⠄⠉⠛⠳⠶⣦⣤⣼⣧⣤⣴⠶⠞⠛⠉⠄⠄⠄⠄⠄⠄⠄⠄
+ <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 27% 73%); text-align: center;"><a href="brad.html">Killa Brad</span></a> <a> </a> <a href="salmon.html">Killa Salmon</span></a>
+ <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 27% 73%); text-align: center;"><a href="https://en.wikipedia.org/wiki/Cock_and_ball_torture">Killa Zok</span></a>  <a></a> <a href="https://linktr.ee/crashtheskyline">Killa Felony</span></a>
+ <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 27% 73%); text-align: center;"><a href="https://linktr.ee/killazate">Killa Zate</span></a> <a></a> <a href="https://killa.lol">Killa Slammed </span></a> 
  <span id="typElement"></span>
  </pre>
  </div>
