--- a/members/felony.html
+++ b/members/felony.html
@@ -10,7 +10,7 @@
   <meta property="og:description" content="ネCertified Killa |.gg/fp3j3ayz7F " />
   <meta property="og:url" content="https://killa.lol" />
   <meta name="theme-color" content="#000000">
-  <link href="stylesheet.css" rel="stylesheet">
+  <link href="felony.css" rel="stylesheet">
 </head>
 
 <script>
