--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
   font-weight: bold;
   font-size: 16px;
   user-select: none;
-  color: hwb(0 27% 73%);
-  background: repeating-linear-gradient(120deg, hwb(0 27% 73%) 0%, black 20%, hwb(0 27% 73%) 20%);
+  color: hwb(290 0% 0%);
+  background: repeating-linear-gradient(120deg, hwb(290 0% 0%) 0%, black 20%, hwb(290 0% 0%) 20%);
   background-size: 60vw 60vw;
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
@@ -157,8 +157,8 @@
   font-weight: bold;
   font-size: 16px;
   user-select: none;
-  color: hwb(0 27% 73%);
-  background: repeating-linear-gradient(120deg, hwb(0 27% 73%) 0%, black 20%, hwrgb(255, 0, 0)0%);
+  color: hwb(290 0% 0%);
+  background: repeating-linear-gradient(120deg, hwb(290 0% 0%) 0%, black 20%, hwrgb(255, 0, 0)0%);
   background-size: 60vw 60vw;
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
@@ -182,7 +182,7 @@
   top: 20px;
   width: 400px;
   height: 38px;
-  background: repeating-linear-gradient(120deg, hwb(0 27% 73%) 0%, black 60%, hwb(0 27% 73%) 20%);
+  background: repeating-linear-gradient(120deg, hwb(290 0% 0%) 0%, black 60%, hwb(290 0% 0%) 20%);
   background-size: 60vw 60vw;
   animation: slide 10s linear infinite forwards;
   transition: 1s;
@@ -272,91 +272,96 @@
 
  <body onload="document.body.style.opacity='1'">
  <div class="center">
- <pre style="font-weight: bold;text-shadow: 0 0 5px hwb(0 27% 73%);">
-  ⠄⠄⠄⠄⠄⠄⠄⠄⣀⣤⡴⠶⠟⠛⠛⠛⠛⠻⠶⢦⣤⣀⠄⠄⠄⠄⠄⠄⠄⠄
-  ⠄⠄⠄⠄⠄⣠⣴⡟⠋⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠈⠙⢻⣦⣄⠄⠄⠄⠄⠄
-  ⠄⠄⠄⣠⡾⠋⠈⣿⣶⣄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣠⣶⣿⠁⠙⢷⣄⠄⠄⠄
-  ⠄⠄⣴⠏⠄⠄⠄⠸⣇⠉⠻⣦⣀⠄⠄⠄⠄⣀⣴⠟⠉⣸⠇⠄⠄⠄⠹⣦⠄⠄
-  ⠄⣼⠏⠄⠄⠄⠄⠄⢻⡆⠄⠄⠙⠷⣦⣴⠾⠋⠄⠄⢰⡟⠄⠄⠄⠄⠄⠹⣧⠄
-  ⢰⡏⠄⠄⠄⠄⠄⠄⠈⣷⠄⢀⣤⡾⠋⠙⢷⣤⡀⠄⣾⠁⠄⠄⠄⠄⠄⠄⢹⡆
-  ⣿⠁⠄⠄⠄⠄⠄⠄⠄⣸⣷⠛⠁⠄⠄⠄⠄⠈⠛⣾⣇⠄⠄⠄⠄⠄⠄⠄⠄⣿
-  ⣿⠄⠄⠄⠄⠄⣠⣴⠟⠉⢻⡄⠄ KILLA ⠄⣾⡟⠉⠻⣦⣄⠄⠄⠄⠄⣿
-  ⣿⡀⠄⢀⣴⠞⠋⠄⠄⠄⠈⣷⡀⡀⡀⡀⡀⡀⡀⣾⠁⠄⠄⠄⠙⠳⣦⡀⡀⣿
- ⠸⣧⠾⠿⠷⠶⠶⠶⠶⠶⠶⢾⣷⠶⠶⠶⠶⣾⡷⠶⠶⠶⠶⠶⠶⠾⠿⠷⣼⠇
-  ⠄⢻⣆⠄⠄⠄⠄⠄⠄⠄⠄⠄⢿⡄⠄⠄⢠⡿⠄⠄⠄⠄⠄⠄⠄⠄⠄⣰⡟⠄
-  ⠄⠄⠻⣆⠄⠄⠄⠄⠄⠄⠄⠄⠘⣷⠄⠄⣾⠃⠄⠄⠄⠄⠄⠄⠄⠄⣰⠟⠄⠄
-  ⠄⠄⠄⠙⢷⣄⠄⠄⠄⠄⠄⠄⠄⢹⣇⣸⡏⠄⠄⠄⠄⠄⠄⠄⣠⡾⠋⠄⠄⠄
-  ⠄⠄⠄⠄⠄⠙⠳⣦⣄⡀⠄⠄⠄⠄⢿⡿⠄⠄⠄⠄⢀⣠⣴⠞⠋⠄⠄⠄⠄⠄
-  ⠄⠄⠄⠄⠄⠄⠄⠄⠉⠛⠳⠶⣦⣤⣼⣧⣤⣴⠶⠞⠛⠉⠄⠄⠄⠄⠄⠄⠄⠄
-
- <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 27% 73%);"><a href="/members/brad.html">Killa   Brad</span></a>
- <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 27% 73%);"><a href="/members/salmon.html"> Killa   Salmon</span></a>
- <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 27% 73%);"><a href="/members/felony.html"> Killa   Felony</span></a>
- <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 27% 73%);"><a href="https://killa.lol">  Killa   Slammed</span></a>
- <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 27% 73%);"><a href="https://linktr.ee/killazate">Killa   Zate</span></a>
- <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 27% 73%);"><a href="https://en.wikipedia.org/wiki/Cock_and_ball_torture">Killa   Zok </span></a>
+ <pre style="font-weight: bold;text-shadow: 0 0 5px hwb(290 0% 0%);">
+   ⠀⠀⠀⠀⠎⠀⠀⠀⠀⠀⠀⡼⠃⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠻⡄⠀⠀⠀⠀⢀⣙⣦⠀⠀⠀⠀⠀⠀
+   ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣼⠃⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠻⣄⠀⠀⠀⠀⠀⣿⣇⠀⠀⠀⠀⠀
+   ⠀⠀⠀⠀⠀⠀⠀⠀⠀⢰⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢻⡄⠀⠀⠀⠀⠘⣽⡆⠀⠀⠀⠀
+   ⢀⠀⠀⠀⠀⠀⠀⠀⢀⡾⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢻⠀⠀⠀⠀⠀⢹⡟⠀⠀⠀⠀
+   ⢁⡀⠀⠀⠀⠀⠀⠀⣸⠇⠀⠀⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢇⠀⠀⠀⠀⠀⢿⣦⠀⠀⠀
+   ⠈⠀⠀⠀⠀⠀⠀⢀⡟⠀⠀⢸⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡆⠀⠀⣄⠀⠀⠀⠀⠀⠀⠀⢀⣀⣠⠖⢢⣸⣆⣀⠀⠀⠀⠈⣿⠆⠀⠀
+   ⠀⠀⠀⠀⠀⠀⠀⣼⠁⣰⠀⢸⠻⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠁⠀⠀⠘⣷⣦⣀⠀⠀⠀⣞⠉⢉⣦⣤⢬⣇⣀⣭⡿⠀⠀⠀⠸⠀⠀⠀
+   ⡀⠀⠀⠀⠀⠀⢀⡟⢠⠟⡆⢸⡀⢱⣄⣠⣶⠀⢣⠀⠀⠀⠀⢸⡰⣄⠀⠘⣏⠛⠻⢶⡞⠙⢲⠏⡁⠀⠐⠛⣿⡇⠀⠀⠀⠀⠀⠀⠀⠀
+   ⡇⠀⠀⠀⠀⠀⢸⡇⠸⠀⠘⢿⣿⠛⠛⣄⠀⠳⣌⣧⠀⠀⠀⠀⣇⠢⠙⢶⣾⢧⡤⢾⡤⠶⠿⣤⣁⣤⠴⡎⠹⡇⠀⠀⠀⠀⠀⠀⠀⠀
+   ⠀⠀⠀⠀⠀⠀⢸⣷⣇⢠⣦⣬⣙⠢⡀⠈⠑⠢⠿⠛⠳⢼⡗⠤⣸⣄⠀⠀⠈⠛⢳⣄⠄⠀⠀⠀⠀⠙⢦⡈⢶⡇⠀⠀⠀⠀⠀⠀⠀⠀
+   ⠀⠀⠀⠀⠀⠀⢸⣿⣿⣿⣿⣿⣻⣷⣌⠂⠀⠀⠠⠤⣤⠴⠆⠀⠈⠉⠹⡄⢀⡴⣋⣤⣶⣶⣶⣶⣶⣄⡀⠙⠲⡇⠀⠀⠀⠀⠀⠀⠀⠀
+   ⠀⠀⠀⠀⠀⠀⢸⡟⣿⠟⠛⢻⠟⣿⣿⣷⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⢺⣾⣿⣿⣿⣷⣧⣽⣿⣿⣿⣷⣀⡇⠀⠀⠀⠀⠀⠀⠀⠀
+   ⠀⠀⠀⠀⠀⠀⢸⣿⡟⣆⠀⢸⣿⣿⣝⢻⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢰⣛⣿⣤⡾⢷⣤⣸⡇⠉⠛⢿⣿⣿⡇⠀⠀⠀⠀⠀⠀⠀⠀
+   ⠀⠀⠀⠀⠀⠀⠘⣿⣇⠈⠀⣀⡁⠾⣿⡿⠃⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠘⣏⣽⡿⠋⠈⣿⠃⠀⠀⣸⠋⢸⠁⠀⠀⠀⠀⠀⠀⠀⠀
+   ⠀⠀⠀⠀⠀⠀⠀⢿⣽⡀⠀⠉⠙⠳⠞⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⢹⣓⣒⣋⠁⣀⣠⡎⠁⠀⡟⠀⠀⠀⠀⠀⠀⠀⠀⠀
+   ⠀⠀⠀⠀⠀⠀⠀⠈⢿⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠛⠳⠤⠼⠋⠉⠁⣆⡞⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+   ⠀⠀⠀⠀⠀⠀⠀⡀⠈⠻⣄⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣠⢏⣴⠃⠀⠀⠀⠀⠀⠀⠀⠀⠀
+   ⠀⠀⠀⠀⠀⡄⠀⠸⡗⣶⣶⡋⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠚⢛⣽⠃⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+   ⠀⠀⠀⠀⠀⢳⡀⠀⠹⣦⢨⠙⢦⡀⠀⠀⠀⢸⣿⠗⠲⣖⣶⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣠⡾⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠀
+   ⠀⣶⠀⣀⠀⠀⠳⣄⠀⠙⠿⢄⣀⠉⢲⣄⠀⠀⠙⠋⠉⠙⠞⠋⠀⠀⠀⠀⠀⠀⠀⠀⢀⣠⠴⣾⠏⠀⠀⠀⠀⠀⢀⡖⠀⣠⡄⠀⢸⠀
+   ⠀⠘⣧⣹⣷⣤⣀⠀⠉⠲⢤⡀⠈⢉⣹⢿⠙⠢⣄⠀⠀⠀⠀⠀⠀⠀⠀⣀⣀⠤⡒⠋⢁⡤⣞⠁⠀⠀⠀⠀⢀⣴⡟⣁⡔⠃⠳⡄⠈⣶
+   ⠀⠀⠈⠿⣿⣮⣽⣿⣦⠶⠿⠛⠛⠻⠬⣮⡳⣤⣌⣙⣶⡶⣶⡖⠒⠛⠉⠁⠀⠀⠀⣀⣬⠞⠉⠀⢀⣀⣀⣴⡿⠷⠚⠉⠀⠀⠀⠈⠓⠾
+   ⠀⠀⠀⠀⠀⠉⠉⠉⠀⣀⣤⠶⢶⠒⠒⢲⣯⣽⠟⠉⠀⡾⣯⣧⠀⠠⢤⣀⣠⠔⠋⠁⡠⠋⠉⠉⠉⠙⣷⠶⢶⡎⠤⠄⠀⠀⠀⠀⠀⠀
+   ⠀⠀⠀⠀⠀⠀⢀⣴⠟⠉⠀⢰⠃⠀⣠⡏⡼⠁⠀⠀⠈⢿⠟⠁⠀⠀⠀⠀⠀⣠⠴⠋⠀⠀⠀⠀⠀⢠⠏⠙⠛⠉⠉⠉⠀⠴⠛⠛⠲⣄
+   ⠀⠀⠀⠀⠀⢠⡿⠁⠀⠀⢠⠏⠀⢰⡏⠰⠃⠀⠀⠀⠀⠈⣦⠀⠀⠀⣠⠔⠋⠀⠀⠀⠀⠀⠀⠀⢀⡎⡠⠂⠀⠀⢀⡀⠀⠀⠀⠀⠀⠀
+ <span style="font-weight: bold;text-shadow: 0 0 5px hwb(290 0% 0%); text-align: center;"><a href="/members/brad.html">    ♡ ♡ ♡  Killa Brad</span></a> <a>♡</a> <a href="/members/salmon.html">Killa Salmon  ♡ ♡ ♡</span></a>
+ <span style="font-weight: bold;text-shadow: 0 0 5px hwb(290 0% 0%); text-align: center;"><a href="https://en.wikipedia.org/wiki/Cock_and_ball_torture">    ♡ ♡  Killa Zok</span></a>  <a>♡</a> <a href="/members/felony.html">Killa Felony  ♡ ♡</span></a>
+ <span style="font-weight: bold;text-shadow: 0 0 5px hwb(290 0% 0%); text-align: center;"><a href="https://linktr.ee/killazate">     ♡  Killa Zate</span></a> <a>♡</a> <a href="https://killa.lol">Killa Slammed ♡</span></a> 
  <span id="typElement"></span>
  </pre>
  </div>
  <pre>   </pre>
- <pre>  <a href="https://discord.gg/fp3j3ayz7F"><span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);">Discord</span> </a>
- <pre>  <a href="credits.html"><span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);">Credits</span> </a>
+ <pre>   <a href="https://discord.gg/fp3j3ayz7F"><span style="font-weight: bold;text-shadow: 0 0 5px hwb(290 0% 0%);">Discord</span> </a>
  </pre>
  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
  <style>
 
   /* customizable snowflake styling */
   .snowflake {
-    color: hwb(0 27% 73%);
+    color: hwb(290 0% 0%);
     font-size: 1em;
     font-family: Arial, sans-serif;
-    text-shadow: 0 0 5px rgb(0 27% 73%);
+    text-shadow: 0 0 5px rgb(290 0% 0%);
   }
   
   @-webkit-keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}@-webkit-keyframes snowflakes-shake{0%,100%{-webkit-transform:translateX(0);transform:translateX(0)}50%{-webkit-transform:translateX(80px);transform:translateX(80px)}}@keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}@keyframes snowflakes-shake{0%,100%{transform:translateX(0)}50%{transform:translateX(80px)}}.snowflake{position:fixed;top:-10%;z-index:9999;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;cursor:default;-webkit-animation-name:snowflakes-fall,snowflakes-shake;-webkit-animation-duration:10s,3s;-webkit-animation-timing-function:linear,ease-in-out;-webkit-animation-iteration-count:infinite,infinite;-webkit-animation-play-state:running,running;animation-name:snowflakes-fall,snowflakes-shake;animation-duration:10s,3s;animation-timing-function:linear,ease-in-out;animation-iteration-count:infinite,infinite;animation-play-state:running,running}.snowflake:nth-of-type(0){left:1%;-webkit-animation-delay:0s,0s;animation-delay:0s,0s}.snowflake:nth-of-type(1){left:10%;-webkit-animation-delay:1s,1s;animation-delay:1s,1s}.snowflake:nth-of-type(2){left:20%;-webkit-animation-delay:6s,.5s;animation-delay:6s,.5s}.snowflake:nth-of-type(3){left:30%;-webkit-animation-delay:4s,2s;animation-delay:4s,2s}.snowflake:nth-of-type(4){left:40%;-webkit-animation-delay:2s,2s;animation-delay:2s,2s}.snowflake:nth-of-type(5){left:50%;-webkit-animation-delay:8s,3s;animation-delay:8s,3s}.snowflake:nth-of-type(6){left:60%;-webkit-animation-delay:6s,2s;animation-delay:6s,2s}.snowflake:nth-of-type(7){left:70%;-webkit-animation-delay:2.5s,1s;animation-delay:2.5s,1s}.snowflake:nth-of-type(8){left:80%;-webkit-animation-delay:1s,0s;animation-delay:1s,0s}.snowflake:nth-of-type(9){left:90%;-webkit-animation-delay:3s,1.5s;animation-delay:3s,1.5s}.snowflake:nth-of-type(10){left:25%;-webkit-animation-delay:2s,0s;animation-delay:2s,0s}.snowflake:nth-of-type(11){left:65%;-webkit-animation-delay:4s,2.5s;animation-delay:4s,2.5s}
   </style>
   <div class="snowflakes" aria-hidden="true">
     <div class="snowflake">
-      ⡀
+      ♡
     </div>
     <div class="snowflake">
-      ⡀
+      ♡
     </div>
     <div class="snowflake">
-      ⡀
+      ♡
     </div>
     <div class="snowflake">
-      ⡀
+      ♡
     </div>
     <div class="snowflake">
-      ⡀
+      ♡
     </div>
     <div class="snowflake">
-      ⡀
+      ♡
     </div>
     <div class="snowflake">
-      ⡀
+      ♡
     </div>
     <div class="snowflake">
-      ⡀
+      ♡
     </div>
     <div class="snowflake">
-      ⡀
+      ♡
     </div>
     <div class="snowflake">
-      ⡀
+      ♡
     </div>
     <div class="snowflake">
-      ⡀
+      ♡
     </div>
     <div class="snowflake">
-      ⡀
+      ♡
     </div>
   </div>
   <div>
 
     <div>
-      <button id="button" style="color:hwb(0 27% 73%); font-family:'Courier New', Courier, monospace; border: none; margin: 0; background-color: #000000; position: absolute; top: 50%;left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%); width: 100%; height: 100%;" onclick="playAudio();document.getElementById('button').hidden=true;document.getElementById('site').hidden=false">   
+      <button id="button" style="color:hwb(290 0% 0%); font-family:'Courier New', Courier, monospace; border: none; margin: 0; background-color: #000000; position: absolute; top: 50%;left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%); width: 100%; height: 100%;" onclick="playAudio();document.getElementById('button').hidden=true;document.getElementById('site').hidden=false">   
   <div class="center">
   <pre>
 ╦ ╦╔═╗╦  ╔═╗╔═╗╔╦╗╔═╗  ╔╦╗╔═╗  ╦╔═╦╦  ╦  ╔═╗
@@ -484,7 +489,7 @@ GET FUCKING KILLED
  <style>
  span{
  font-weight: bold;
- text-shadow: 0 0 5px hwb(0 27% 73%);
+ text-shadow: 0 0 5px hwb(290 0% 0%);
  }
  </style>
  
