--- a/members/felony.html
+++ b/members/felony.html
@@ -10,7 +10,7 @@
   <meta property="og:description" content="ネCertified Killa |.gg/fp3j3ayz7F " />
   <meta property="og:url" content="https://killa.lol" />
   <meta name="theme-color" content="#000000">
-  <link href="felony.css" rel="stylesheet">
+  <link href="stylesheet.css" rel="stylesheet">
 </head>
 
 <script>
@@ -26,21 +26,31 @@
  <div class="center">
  <pre style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);">
 
-  ⠀⠈⠀⠀⠳⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-  ⣄⣤⣶⣶⣦⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀⣠⣿⣿⣿⠋⠁⠀⠀⠈⠻⣿⣿⣿⣿⣿
-  ⣿⣿⣿⣿⣿⣿⣦⣤⡀⠀⠀⠀⠀⠀⢠⣿⣿⣿⡏⠀⠊⠀⠀⠀⠀⠸⣿⣿⣿⣿
-  ⣿⣿⣿⣿⣿⣿⣿⠟⠁⠀⠀⠀⠀⢀⣾⣿⣟⠥⢖⣧⣾⣿⠀⣀⣤⠀⠘⠿⣿⣿
-  ⣿⣿⣿⣿⣿⣿⣿⠀⠀⠀⠀⠀⠀⣼⣿⡟⢡⣾⣿⣿⡿⠃⠀⢸⣿⣇⠀⢸⣿⣿
-  ⣿⣿⣿⣿⣿⣿⡇⠀⠀⠀⠀⠀⣰⣿⣿⡗⠈⠙⠛⡉⠔⠁⠀⢸⣿⣿⣆⠈⣿⣿
-  ⣿⣿⣿⣿⣿⣿⠃⠀⠀⠀⠀⢰⣿⣿⣿⣿⣷⠀⠁⠴⠾⣿⡄⠀⠛⠿⠿⠂⢸⣿
-  ⠿⣿⠻⠿⠿⣿⠆⠀⠀⠀⠀⢸⣿⣿⣿⣿⣿⠀⠀⣀⣀⠀⠀⠀⠢⢀⣀⣠⣾⣿
-  ⠀⠸⠀⠀⢀⠆⠀⠀⠀⠀⠀⢘⣿⣿⣿⣿⣟⣌⣾⣿⣿⣿⡄⠀⠀⢠⣾⣿⣿⣿
-  ⣀⡀⠀⠀⠈⠀⠀⠀⠀⢀⣰⣿⣿⣿⣿⣿⣿⢸⣿⣿⣿⣿⠃⠀⢀⣿⣿⣿⣿⣿
-  ⣿⣧⠀⠀⠀⣿⣶⣶⣾⣿⣿⣿⣿⣿⣿⣿⣿⣸⣿⣿⣿⠏⣠⣴⣿⣿⣿⣿⣿⣿
-  ⣿⣿⠀⠀⠀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡟⣿⣿⣿⡏⣼⣿⣿⣿⣿⣿⣿⣿⣿
-  ⣿⣿⠀⠀⠀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⣿⣿⡟⣼⣿⣿⣿⣿⣿⣿⣿⣿⣿
-  ⣿⣿⣇⠀⠀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣇⠻⢟⣼⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-  ⣿⣿⣿⣆⠀⢹⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+             ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀ ⣴⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+  ⠀⠀⠀⠀⠀⠀⠀     ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣼⣿⣿⣿⣿⣿⣿⡿⠿⠿⠿⠿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+  ⣄⣀⣠⣶⣶⣶⣶⣶⣤⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣾⣿⣿⣿⣿⣿⠋⠁⠀⠀⠀⠀⠀⠈⢻⣿⣿⣿⣿⣿⣿⣿⣿⣿
+  ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣾⣿⣿⣿⣿⣿⠇⠀⢀⡴⠀⠀⠀⠀⠀⠀⠈⠛⣿⣿⣿⣿⣿⣿⣿
+  ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣶⣦⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣸⣿⣿⣿⣿⣿⡿⠀⠀⠈⠀⠀⠀⠀⠀⠀⠀⠀⠐⢼⣿⣿⣿⣿⣿⣿
+  ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⠋⠀⠀⠀⠀⠀⠀⠀⠀⠀⢰⣿⣿⣿⣿⠟⢁⣤⠶⢊⣠⣶⣿⣷⠀⠀⠀⢀⡀⠀⠀⢹⣿⣿⣿⣿⣿
+  ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣿⣿⣿⣿⡷⠚⣉⣤⣶⣿⣿⣿⣿⠇⠀⠘⣰⣿⣷⡀⠀⠈⠁⣹⣿⣿⣿
+  ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣾⣿⣿⣿⠃⢠⣾⣿⣿⣿⣿⣿⣿⠏⠀⠀⠀⣿⣿⣿⣧⠀⠀⠀⣿⣿⣿⣿
+  ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⣼⣿⣿⣿⣿⡀⠘⢿⣿⣿⣿⡿⠟⢁⡄⠀⠀⠀⣿⣿⣿⣿⣆⠀⠀⣿⣿⣿⣿
+  ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⠀⠀⠀⠀⠀⠀⠀⠀⠀⣰⣿⣿⣿⣿⣧⠀⠀⠀⠀⠀⢀⡤⠖⠁⠀⠀⠀⠀⢻⣿⣿⣿⣿⣆⠀⠸⣿⣿⣿
+  ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⠀⠀⠀⠀⠀⠀⠀⠀⢰⣿⣿⣿⣿⣿⣿⣿⣤⠄⠀⠈⠀⣴⣦⣾⣿⣦⠀⠀⠈⠻⣿⣿⣿⣿⡆⠀⠹⣿⣿
+  ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠁⠀⠀⠀⠀⠀⠀⠀⠀⣿⣿⣿⣿⣿⣿⣿⣿⣿⡆⠀⠀⠀⠈⠛⠛⠛⠿⠇⠀⠀⠀⠈⠉⠉⠉⠀⠀⢠⣿⣿
+  ⢿⣿⣿⠛⠿⠿⣿⣿⣿⣿⡆⠀⠀⠀⠀⠀⠀⠀⠀⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠰⣄⠀⠀⠀⠀⣠⣿⣿⣿
+  ⠀⠀⢹⠀⠀⠀⠀⠀⣟⠋⠀⠀⠀⠀⠀⠀⠀⠀⠀⢻⣿⣿⣿⣿⣿⣿⣿⣿⠁⡔⣡⣾⣿⣿⣷⣶⣄⠀⠀⠀⠀⠀⠈⢩⣿⣿⣿⣿⣿⣿
+  ⠀⠀⠸⠀⠀⠀⠀⢀⠸⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⣿⣿⣿⣿⣿⣿⣿⣼⢱⣿⣿⣿⣿⣿⣿⣿⡆⠀⠀⠀⠀⢰⣿⣿⣿⣿⣿⣿⣿
+  ⠀⠀⠀⠀⠀⠀⠀⡘⠀⠁⠀⠀⠀⠀⠀⠀⠀⠀⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⣾⣿⣿⣿⣿⣿⣿⣿⠇⠀⠀⠀⢠⣿⣿⣿⣿⣿⣿⣿⣿
+  ⣤⣤⣤⠀⠀⠀⠀⠁⢀⡀⠀⠀⠀⠀⢀⣰⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠇⣿⣿⣿⣿⣿⣿⣿⡏⠀⠀⠀⣠⣿⣿⣿⣿⣿⣿⣿⣿⣿
+  ⣿⣿⣿⠀⠀⠀⠀⠀⢸⣿⣷⣶⣶⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠀⣿⣿⣿⣿⣿⣿⡟⠀⣀⣴⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+  ⣿⣿⣿⠀⠀⠀⢀⠀⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⢸⣿⣿⣿⣿⣿⡿⢁⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+  ⣿⣿⣿⡀⠀⠀⠀⠀⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⢸⣿⣿⣿⣿⣿⢁⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+  ⣿⣿⣿⡇⠀⠀⠀⠀⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⣼⣿⣿⣿⣿⠃⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+  ⣿⣿⣿⣧⠀⠀⠀⠀⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⣿⣿⣿⣿⠃⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+  ⣿⣿⣿⣿⡄⠀⠀⠀⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣧⠙⠿⠟⢃⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+  ⣿⣿⣿⣿⣿⡀⠀⠀⠘⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣶⣶⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+  ⣿⣿⣿⣿⣿⣿⣄⡀⠀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
  <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%); text-align: center;"><a2> ☆ ☆ ☆  Killa Felony  ☆ ☆ ☆</span></a2>
  <a>---</a>
  <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%); text-align: center;"><a href="https://www.youtube.com/channel/UCps1KzsBJo4TA4uv4Nm7UAg">☆  Youtube  ☆</span></a>
@@ -60,21 +70,16 @@
 <div class="center">
   <pre>
     
-    ⠀⠈⠀⠀⠳⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-    ⣄⣤⣶⣶⣦⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀⣠⣿⣿⣿⠋⠁⠀⠀⠈⠻⣿⣿⣿⣿⣿
-    ⣿⣿⣿⣿⣿⣿⣦⣤⡀⠀⠀⠀⠀⠀⢠⣿⣿⣿⡏⠀⠊⠀⠀⠀⠀⠸⣿⣿⣿⣿
-    ⣿⣿⣿⣿⣿⣿⣿⠟⠁⠀⠀⠀⠀⢀⣾⣿⣟⠥⢖⣧⣾⣿⠀⣀⣤⠀⠘⠿⣿⣿
-    ⣿⣿⣿⣿⣿⣿⣿⠀⠀⠀⠀⠀⠀⣼⣿⡟⢡⣾⣿⣿⡿⠃⠀⢸⣿⣇⠀⢸⣿⣿
-    ⣿⣿⣿⣿⣿⣿⡇⠀⠀⠀⠀⠀⣰⣿⣿⡗⠈⠙⠛⡉⠔⠁⠀⢸⣿⣿⣆⠈⣿⣿
-    ⣿⣿⣿⣿⣿⣿⠃⠀⠀⠀⠀⢰⣿⣿⣿⣿⣷⠀⠁⠴⠾⣿⡄⠀⠛⠿⠿⠂⢸⣿
-    ⠿⣿⠻⠿⠿⣿⠆⠀⠀⠀⠀⢸⣿⣿⣿⣿⣿⠀⠀⣀⣀⠀⠀⠀⠢⢀⣀⣠⣾⣿
-    ⠀⠸⠀⠀⢀⠆⠀⠀⠀⠀⠀⢘⣿⣿⣿⣿⣟⣌⣾⣿⣿⣿⡄⠀⠀⢠⣾⣿⣿⣿
-    ⣀⡀⠀⠀⠈⠀⠀⠀⠀⢀⣰⣿⣿⣿⣿⣿⣿⢸⣿⣿⣿⣿⠃⠀⢀⣿⣿⣿⣿⣿
-    ⣿⣧⠀⠀⠀⣿⣶⣶⣾⣿⣿⣿⣿⣿⣿⣿⣿⣸⣿⣿⣿⠏⣠⣴⣿⣿⣿⣿⣿⣿
-    ⣿⣿⠀⠀⠀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡟⣿⣿⣿⡏⣼⣿⣿⣿⣿⣿⣿⣿⣿
-    ⣿⣿⠀⠀⠀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⣿⣿⡟⣼⣿⣿⣿⣿⣿⣿⣿⣿⣿
-    ⣿⣿⣇⠀⠀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣇⠻⢟⣼⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-    ⣿⣿⣿⣆⠀⢹⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣠⣦⣤⣴⣤⣤⣄⣀⣀⣀⣀⣀⣀⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⣤⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣀⡀⠀⠀⣀⣀⣠⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣛⣛⣻⣿⣦⣀⠀⢀⣀⣀⣏⣹⠀
+    ⢠⣶⣶⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠿⠿⠿⠿⠿⠿⠿⠿⠿⠭⠭⠽⠽⠿⠿⠭⠭⠭⠽⠿⠿⠛
+    ⠈⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⠿⠛⠉⢻⣿⣿⣿⡟⠏⠉⠉⣿⢿⣿⣿⣿⣇⠀⠀⠀⠀⠉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⣿⣿⣿⣿⣿⣿⣿⡿⠿⠛⠉⠁⠀⠀⠀⢠⣿⣿⣿⠋⠑⠒⠒⠚⠙⠸⣿⣿⣿⣿⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⣿⣿⡿⠿⠛⠉⠁⠀⠀⠀⠀⠀⠀⠀⣰⣿⣿⡿⠃⠀⠀⠀⠀⠀⠀⠀⢻⣿⣿⣿⣿⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠘⠛⠛⠃⠀⠀⠀⠀⠀⠀⠀⠀⠀⠻⣿⣿⣿⣿⣦⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠙⣿⣿⣿⣿⣿⣷⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠻⢿⣿⡿⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
 
                                     Click To Continue To The Site.                                  
 </button>
@@ -166,8 +171,8 @@
           "subscribe to felony",
           "best aimer",
           "this site was skidded off salmons",
-          "the handcuffs mean felony",
           "felony was here",
+          
  ];
 
  var num = getRandomInt(strs.length);
