--- a/members/felony.html
+++ b/members/felony.html
@@ -26,27 +26,43 @@
  <div class="center">
  <pre style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);">
 
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣤⡴⠚⢓⠲⣶⣷⣶⣦⣤⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣤⡶⢾⣿⡿⢀⣖⠉⠓⢤⣙⠻⢿⣿⣿⣦⣀⠀⠀⠀⠀⠀⠀⠀
-⠀⣀⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡞⢨⢿⠈⣿⡇⣸⣏⣑⠲⢤⡝⠀⣼⠒⠊⠙⣭⠆⠀⠀⠀⠀⠀⠀
-⡞⠁⠉⠑⠲⠤⣀⣤⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢱⣠⠞⠉⢁⣀⣀⣀⣀⠉⠻⢱⡚⣫⣝⡒⣦⠟⠲⡄⠀⠀⠀⠀⠀
-⠱⢄⡀⠀⠀⠀⠀⠉⠛⠻⣷⣶⣤⣄⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠟⣠⡞⠉⢰⠳⡀⠀⠙⣦⣀⣹⣉⣙⣉⠙⠫⡁⣸⠀⠀⠀⠀⠀
-⠀⠀⣹⠳⡦⠤⣀⣀⠀⠀⠹⠿⢿⣿⣿⣿⣷⣦⣤⣀⡀⠀⠀⠀⠀⡞⡜⡟⢳⠀⡜⠀⢣⠀⡰⠙⡀⣰⠇⠀⣸⢧⡀⡷⠃⣠⣴⣶⣶⣦
-⠀⠀⢳⠀⣆⠀⠀⢠⠉⠀⠀⠀⠀⠈⣿⣿⣿⣿⣿⣿⣿⣿⣶⣤⣀⢣⡙⠧⠬⣷⡥⠤⠼⠾⠥⣄⣷⡁⢠⡴⠁⡇⡇⢇⣼⣿⡿⠟⠻⠿
-⠀⠀⠈⠣⢌⣦⡴⠊⠉⠀⠀⠀⠀⠐⢻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣿⡀⠀⠀⠀⠀⠀⠀⠀⠉⠙⡲⢴⣟⡇⣼⣿⣿⠁⠀⠀⠀
-⠀⠀⠀⠀⠀⢸⡀⠀⣠⠤⠤⠤⠤⢴⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠟⠢⠤⠀⠀⠀⡀⠀⠀⢀⡨⠗⠛⠛⠁⢿⣿⡄⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠙⠋⠀⠀⠀⠀⠀⠉⠉⠉⠉⠉⠉⠉⠛⠛⠿⣿⣿⣿⣿⣿⣿⠀⠀⠀⠀⠀⠀⠉⠉⢻⣿⣆⠀⠀⠀⠀⠘⣿⣿⡆⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢹⣿⣿⣿⡟⠀⠀⠀⠀⠀⠀⠀⠀⣼⣿⣿⡀⠀⠀⠀⠀⢹⣿⣷⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣿⣿⣿⠃⠀⠀⠀⠀⠀⠀⠀⢠⣿⣿⣿⡇⠀⠀⠀⠀⠸⣿⣿⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣸⣿⡿⠃⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⣿⣿⣿⡀⠀⠀⠀⢀⣿⣿⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣶⣿⣿⣶⣶⣤⣀⢀⣿⣿⠃⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⣿⣿⣿⣷⡀⠀⣠⣿⣿⡿⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⡏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⣿⣿⣿⣿⣿⣿⣿⠿⠋⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣄⠀⠀⠀⠀⠀⠀⠀⢀⣴⣿⣿⣿⣿⣿⣿⣿⣿⡀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠹⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣧⡀⠀⠀⠀⢀⣴⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠹⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣶⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡄⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣀⠼⣿⣿⣿⣿⣿⣿⡿⢿⠛⠿⠿⠿⠿⣿⣿⣿⣿⣿⣿⣿⠿⠿⣛⠋⠻⡿⠇⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡴⢚⡭⠀⡀⠀⠉⠈⠋⠛⣀⣉⣠⠜⠀⠀⠀⠀⠀⠧⣈⣉⡀⠀⠀⠀⠀⣀⠀⠻⣟⢳⡄⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠙⢧⣴⣋⣁⠤⠴⠒⠉⠉⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠉⠒⠤⣄⣀⣙⡦⡼⠏⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+                      .;iiiiii;;.
+                  ;i!!!!!!!!!!!!!!!i.
+               .i!!!!!!!!!'`.......`''=
+              i!!!!!!!!' .:::::::::::::..
+             i!!!!!!!!' :::::::::::::::::::.
+          ' i!!!!!!!!' :::::::::::::::::::::::.
+         :  !!!!!!!!! ::::::::::::::::::::::::::.
+        ::  !!!!!!!! ::::::::::::::::::::::::::::::
+       ::: <!!!!!!!! ::::::::::::::::::::::::::::::: i!!!!>
+      .::: <!!!!!!!> ::::::::::::::::::::::::::::'` i!!!!!'
+      :::: <!!!!!!!> ::::::::::::::::::::::::'`  ,i!!!!!!'
+      :::: `!!!!!!!> :::::::::::::::::::''`  ,i!!!!!!!!'..
+     `::::  !!!!!!!!.`::::::::::::::'` .,;i!!!!!!!!!!' ::::.
+      ::::  !!!!!!!!!, `''''```  .,;ii!!!!!!!!!!!'' .::::::::
+  i!; `::' .!!!!!!!!!!!i;,;i!!!!!!!!!!!!!!!!!!' .::::::::::::::
+ i!!!!i;,;i!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!''`  ::::::::::::::::::
+ !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!'`..euJB$. ::::::::::::::::' ::.
+  !!!!!!!!!!!!!!!!!!!!!!!!!!!''`,   $$$$$$$$$Fc :::::::::::::: .:::::
+    `''''''''''''''''` ..z e$$$F   d$P"`""??<<3c :::::::::::' ::::::::.
+       :::: ?Fx$b. "?$ $$$b($$"   dF   'ud$$$$$$c `:::::::' .:::::::::::
+       `:::  $$$$$r-.  P9$$$?$bedE' .,d$$$$$$$P"   `::::' .:::::::::::::
+        :::: `? =       """"   ""?????????""  .~~~.  :'.:::::::::::::::' ;
+        :::::  $$$eeed" .~~~~~~~~~~~~~~~~~~~~~~~~~~~  ::::::::::::::::' i!
+        :::::  $$$PF" .~~.$.~~~~~~~~~~~~~~~~~~~~~~~~.  :::::::::::::' ,!!!
+         ::       .~~~~~~ ?$ ~~~~~~~~~~~~~~~~~~~~~~~~.  ::::::::::'  ;!!!!
+          ::  ~~~~~~~~~~~.`$b ~~~~~~~~~~~~~~~~~~~~~~~~. `:::::::'  ;!!!!!'
+         `:::  ~~~~~~~~~~~ `$L ~~~~~~~~~~~~~~~~~~~~~~~ .  `''`   ;!!!!!!
+          ::::  ~~~~~~~~~~~ `$c'~~~~~~~~~~~~~~~~~~~~~ ~~ ,iiii! i!!!!!!  !
+          :::::  ~~~~~~~~~~~ "$c`~~~~~~~~~~~~~~~~~~~ ~~ ;!!!!' i!!!!!!  i!
+          `:::::  ~~~~~~~~~~~ `$.`~~~~~~~~~~~~~~~~  ~  <!!!!' ;!!!!!!'  !!
+           :::'`   `~~~~~~~~~~ "$.`~~~~~~~~~~~~~~ .~ .!!!!!' ;!!!!!!!  i!!
+              ,i!    ~~~~~~~~~~ "$r'~~~~~~~~~~~~ '  ;!!!!!  ;!!!!!!!!  !!!
+             !!!!i !i. `~~~~~~~~ `$c ~~~~~~~~~~~~  <!!!!'  i!!!!!!!!!  !!!
+             :!!!!> !!!;  ~~~~~~~. "$. ~~~~~~~~ .;!!!!'  ;!!!!!!!';!!  `!!
+             `!!!!! `!!!!;.  ~~~~~~~~~~~~~~  .;i!!!!' .i!!!!!!' ,!!!!i  !!
+              !!!!!!; `!!!!!i;. ~~~~~~~ .;i!!!!''`.;i!!!!!!!'.;!!!!!!!>  !
+          :!  !!!!!!!i `'!!!!!!!!!!!!!!!'''`.;ii!!!!!'`.'` ;!!!!!!!!!!   '⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
  <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%); text-align: center;"><a2> ☆ ☆ ☆  Killa Felony  ☆ ☆ ☆</span></a2>
  <a>---</a>
  <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%); text-align: center;"><a href="https://www.youtube.com/channel/UCps1KzsBJo4TA4uv4Nm7UAg">☆  Youtube  ☆</span></a>
