--- a/index.html
+++ b/index.html
@@ -273,22 +273,7 @@
  <body onload="document.body.style.opacity='1'">
  <div class="center">
  <pre style="font-weight: bold;text-shadow: 0 0 5px hwb(0 27% 73%);">
-  ⠄⠄⠄⠄⠄⠄⠄⠄⣀⣤⡴⠶⠟⠛⠛⠛⠛⠻⠶⢦⣤⣀⠄⠄⠄⠄⠄⠄⠄⠄
-  ⠄⠄⠄⠄⠄⣠⣴⡟⠋⠁⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠈⠙⢻⣦⣄⠄⠄⠄⠄⠄
-  ⠄⠄⠄⣠⡾⠋⠈⣿⣶⣄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣠⣶⣿⠁⠙⢷⣄⠄⠄⠄
-  ⠄⠄⣴⠏⠄⠄⠄⠸⣇⠉⠻⣦⣀⠄⠄⠄⠄⣀⣴⠟⠉⣸⠇⠄⠄⠄⠹⣦⠄⠄
-  ⠄⣼⠏⠄⠄⠄⠄⠄⢻⡆⠄⠄⠙⠷⣦⣴⠾⠋⠄⠄⢰⡟⠄⠄⠄⠄⠄⠹⣧⠄
-  ⢰⡏⠄⠄⠄⠄⠄⠄⠈⣷⠄⢀⣤⡾⠋⠙⢷⣤⡀⠄⣾⠁⠄⠄⠄⠄⠄⠄⢹⡆
-  ⣿⠁⠄⠄⠄⠄⠄⠄⠄⣸⣷⠛⠁⠄⠄⠄⠄⠈⠛⣾⣇⠄⠄⠄⠄⠄⠄⠄⠄⣿
-  ⣿⠄⠄⠄⠄⠄⣠⣴⠟⠉⢻⡄⠄ KILLA ⠄⣾⡟⠉⠻⣦⣄⠄⠄⠄⠄⣿
-  ⣿⡀⠄⢀⣴⠞⠋⠄⠄⠄⠈⣷⡀⡀⡀⡀⡀⡀⡀⣾⠁⠄⠄⠄⠙⠳⣦⡀⡀⣿
- ⠸⣧⠾⠿⠷⠶⠶⠶⠶⠶⠶⢾⣷⠶⠶⠶⠶⣾⡷⠶⠶⠶⠶⠶⠶⠾⠿⠷⣼⠇
-  ⠄⢻⣆⠄⠄⠄⠄⠄⠄⠄⠄⠄⢿⡄⠄⠄⢠⡿⠄⠄⠄⠄⠄⠄⠄⠄⠄⣰⡟⠄
-  ⠄⠄⠻⣆⠄⠄⠄⠄⠄⠄⠄⠄⠘⣷⠄⠄⣾⠃⠄⠄⠄⠄⠄⠄⠄⠄⣰⠟⠄⠄
-  ⠄⠄⠄⠙⢷⣄⠄⠄⠄⠄⠄⠄⠄⢹⣇⣸⡏⠄⠄⠄⠄⠄⠄⠄⣠⡾⠋⠄⠄⠄
-  ⠄⠄⠄⠄⠄⠙⠳⣦⣄⡀⠄⠄⠄⠄⢿⡿⠄⠄⠄⠄⢀⣠⣴⠞⠋⠄⠄⠄⠄⠄
-  ⠄⠄⠄⠄⠄⠄⠄⠄⠉⠛⠳⠶⣦⣤⣼⣧⣤⣴⠶⠞⠛⠉⠄⠄⠄⠄⠄⠄⠄⠄
-
+ <img src="htmlss.png" alt="HTML" width="350" height="250">
  <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 27% 73%);"><a href="members/brad.html">Killa   Brad</span></a>
  <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 27% 73%);"><a href="members/salmon.html">  Killa   Salmon</span></a>
  <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 27% 73%);"><a href="members/felony.html">  Killa   Felony</span></a>
