--- a/members/brad.html
+++ b/members/brad.html
@@ -1,7 +1,7 @@
 
 <html>
     <head>
-    <title>ギ | Salmon</title>
+    <title>ギ | Felony</title>
     <script src="/spark.js"></script>
     <script src="/index.js"></script>
     <meta charset="UTF-8">
@@ -10,7 +10,7 @@
     <meta property="og:description" content="ネCertified Killa |.gg/fp3j3ayz7F " />
     <meta property="og:url" content="https://killa.lol" />
     <meta name="theme-color" content="#000000">
-    <link href="brad.css" rel="stylesheet">
+    <link href="felony.css" rel="stylesheet">
   </head>
   
   <script>
@@ -24,51 +24,25 @@
   
    <body onload="document.body.style.opacity='1'">
    <div class="center">
+   <img src="brad.png" alt="HTML" width="350" height="250">
    <pre style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);">
-  
-    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣠⣤⣤⣤⣤⣤⣤⣤⣤⣀⣀⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠀⠀⠀⠀⠀⠀⢀⣤⠶⠟⠛⠛⠉⠉⠉⠁⠀⠀⠈⠉⠉⠙⠛⠿⢶⣤⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠀⠀⠀⠀⣠⠖⠉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠛⢷⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠀⠀⢠⡾⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠙⢷⣄⠀⠀⠀⠀⠀⢀⣀⠀⠀⠀⠀
-    ⠀⠀⠀⣠⡟⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣀⣀⠀⠀⠀⠹⣧⡀⠀⠀⠀⡏⠉⠙⠋⢹⡆
-    ⠀⠀⢠⡿⠀⠀⠀⠀⠀⠀⠀⢀⣀⣀⣀⣀⠀⠀⠀⠀⠀⠀⠀⠀⣠⠚⠉⠉⠛⠿⣦⡀⠀⠸⣷⡀⠀⠀⠹⣄⠀⠠⡹⠃
-    ⠀⢀⣿⠃⠀⠀⠀⠀⣠⣶⠾⠟⠛⠉⠉⠛⠿⣶⣄⠀⠀⠀⠀⣰⠃⢀⣠⣤⣄⠀⠈⢻⣦⠀⢻⣧⠀⠀⠀⠈⠓⠋⠀⠀
-    ⠀⢸⣿⠀⠀⠀⣠⣾⠋⠁⠀⠀⢀⣠⣤⣤⣤⣈⠙⣷⣄⠀⢠⣏⣶⣿⣿⣿⣿⣿⣦⠀⢻⣧⠘⣿⢀⢸⡛⠛⢲⠀⠀⠀
-    ⠀⣾⡇⠀⠀⢠⡿⠁⠀⠀⣠⣾⡿⢿⣿⣿⣿⣿⣷⣌⢿⣆⢸⣿⡋⠉⢉⣿⣿⣿⣿⣧⠈⣿⠀⣿⣿⠀⠹⠶⠋⠀⠀⠀
-    ⠈⡟⣿⠀⠀⢸⠇⠀⢀⣼⣄⠈⠀⣸⣿⣿⣿⣿⣿⣿⡎⣿⣿⣿⣿⣶⣿⣻⣿⣿⣿⣿⣤⣿⢀⣿⣿⠀⠀⠀⠀⠀⠀⠀
-    ⠀⢷⢹⡆⠀⢸⡄⠀⣾⣿⣿⣿⣿⣿⣩⣿⣿⣿⣿⣿⣇⣿⢹⣿⣿⣿⣿⣿⣿⣿⣟⣿⣿⠏⣸⢧⠏⠀⠀⠀⠀⠀⠀⠀
-    ⠀⠈⣇⢳⡀⠈⢧⠐⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠟⠈⢿⣿⣿⣿⣿⣿⣿⣿⣿⠏⢠⢁⡞⠀⠀⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠈⢎⠃⠀⠈⠳⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣾⠟⠁⠀⠀⠈⠻⣿⣿⣿⣿⡿⠟⠁⠀⣠⠎⠀⠀⠀⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠀⠈⠳⣄⠀⠀⠈⠙⡻⠿⢿⣿⡿⠿⠟⠋⠁⠀⠀⠀⠀⠀⠀⠀⠈⠉⠃⣀⡀⣰⠞⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠀⣀⡤⠬⣷⣄⡲⣤⣈⠀⠈⠃⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣠⡴⢛⡵⠚⠁⠀⢀⣠⣤⣀⡀⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠸⣇⠀⠀⠀⢻⣿⠒⠭⣟⣷⢶⣤⣤⣤⣤⣤⣤⣤⣤⣶⢾⣟⠯⠗⠊⠁⠀⠀⠀⣾⠟⠁⠀⢘⣿⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠀⢹⣧⠀⠀⠈⣿⡄⠀⠀⠈⠉⠛⠛⠛⠛⠛⠒⠋⠛⠉⠉⠀⠀⠀⠀⠀⠀⠀⢸⡿⠀⠀⢠⣿⠏⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠀⣠⣿⠇⠀⠀⠙⠛⠛⠒⠒⠛⠛⠛⠻⠿⢷⡢⣤⣔⡶⠿⠟⠛⠛⠛⠻⠿⠽⠟⠁⠀⠀⢺⡿⡄⠀⠀⠀⠀⠀⠀
-    ⠀⠀⢰⣿⠇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣾⡁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢻⣿⡀⠀⠀⠀⠀⠀
-    ⠀⠀⣿⣿⠀⠀⠀⠀⠀⠀⠀⠀⠙⠛⠻⢿⣿⠒⠲⠛⠙⠲⠦⢼⣿⡿⠟⠛⠃⠀⠀⠀⠀⠀⠀⠀⢸⣇⡇⠀⠀⠀⠀⠀
-    ⠀⠀⠹⠿⣧⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⠇⠀⠀⠀⠀⠀⢸⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⡾⡻⠃⠀⠀⠀⠀⠀
-    ⠀⠀⠀⠀⠈⠻⢦⣀⠀⠀⠀⠀⠀⠀⢀⡾⡿⠀⠀⠀⠀⠀⠀⠘⣿⣆⠀⠀⠀⠀⠀⠀⢀⣠⣴⢯⠞⠀⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠀⠀⠀⠀⠀⠉⠛⠳⠶⠶⠶⣖⡿⠚⠁⠀⠀⠀⠀⠀⠀⠀⠘⠮⣷⣶⡤⡤⠴⠾⠟⠋⠚⠁⠀⠀⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠉⠉⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%); text-align: center;"><a2>-.-.-  Killa Brad  -.-.-</span></a2>
+   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%); text-align: center;"><a2>        Killa BRAD         </span></a2>
    <a>---</a>
-   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%); text-align: center;"><a href="Rickroll.com">  ! Hello Cutie !   </span></a>
-   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%); text-align: center;"><a href="http://discordapp.com/users/1000022273673138226">  Discord  </span></a>
-   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%); text-align: center;"><a href="https://web.roblox.com/users/47197/profile">  Roblox  </span></a>
+   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%); text-align: center;"><a href="http://discordapp.com/users/1000022273673138226">   Discord   </span></a>
+   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%); text-align: center;"><a href="https://web.roblox.com/users/47197/profile">   Roblox   </span></a>
    <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%); text-align: center;"><a id="iplol"></span></a>
    <span id="typElement"></span>
    </pre>
    </div>
    <pre>   </pre>
-   <pre>   <a href="https://discord.gg/fp3j3ayz7F"><span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"> Community </span> </a> | <a href="https://metasec.host/home"><span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"> Site we skidded alot </span> </a>
+   <pre>   <a href="https://discord.gg/fp3j3ayz7F"><span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"> Community </span> </a> | <a href=" "><span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);">Killa Brad#0024</span> </a>
    </pre>
-   <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
-  
+   <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script> 
   <div>
-      <button id="button" style="color:hwb(0 100% 0%); font-family:'Courier New', Courier, monospace; border: none; margin: 0; background-color: #000000; position: absolute; top: 50%;left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%); width: 100%; height: 100%;" onclick="playAudio();document.getElementById('button').hidden=true;document.getElementById('site').hidden=false">   
+      <button id="button" style="color:hwb(0 0% 0%); font-family:'Courier New', Courier, monospace; border: none; margin: 0; background-color: #000000; position: absolute; top: 50%;left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%); width: 100%; height: 100%;" onclick="playAudio();document.getElementById('button').hidden=true;document.getElementById('site').hidden=false">   
   <div class="center">
     <pre>
-                                      Click To Continue To The Site.                                  
+                                      click to continue dumass                                  
   </button>
   </pre>
       </div>
@@ -97,7 +71,7 @@
       });
       document.getElementById('site').hidden=true
       function playAudio() {
-          myAudio = new Audio('brads.mp3'); 
+          myAudio = new Audio('felonys.mp3'); 
           if (typeof myAudio.loop == 'boolean')
           {
               myAudio.loop = true;
@@ -155,8 +129,11 @@
   
    function type() {
        let strs = [
-            "Killa Brad#0024",
-            "brad is secretly a femboy -salmon (felony didnt say this)",
+            "subscribe to felony",
+            "best aimer",
+            "this site was skidded off salmons",
+            "felony was here",
+            
    ];
   
    var num = getRandomInt(strs.length);
@@ -177,7 +154,7 @@
    <style>
    span{
    font-weight: bold;
-   text-shadow: 0 0 5px hwb(0 100% 0%);
+   text-shadow: 0 0 5px hwb(263 0% 0%);
    }
    </style>
    
@@ -185,3 +162,4 @@
    type()
    </script>
    </html>
+  
