--- a/members/brad.html
+++ b/members/brad.html
@@ -129,10 +129,10 @@
   
    function type() {
        let strs = [
-            "subscribe to felony",
-            "best aimer",
-            "this site was skidded off salmons",
-            "felony was here",
+            "felony and salmon are gay",
+            "brad is sexy",
+            "Brad123",
+            "Get Fucked",
             
    ];
   
@@ -154,7 +154,7 @@
    <style>
    span{
    font-weight: bold;
-   text-shadow: 0 0 5px hwb(263 0% 0%);
+   text-shadow: 0 0 5px hwb(0 100% 0%);
    }
    </style>
    
