--- a/members/brad.html
+++ b/members/brad.html
@@ -1,7 +1,7 @@
 
 <html>
     <head>
-    <title>ギ | Felony</title>
+    <title>ギ | Brad's Crib</title>
     <script src="/spark.js"></script>
     <script src="/index.js"></script>
     <meta charset="UTF-8">
@@ -25,7 +25,7 @@
    <body onload="document.body.style.opacity='1'">
    <div class="center">
    <img src="brad.png" alt="HTML" width="350" height="450">
-   <pre style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);">
+   <pre style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);">Welcome To My Crib.
    <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%); text-align: center;"><a2>        Killa BRAD         </span></a2>
    <a>666</a>
    <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%); text-align: center;"><a href="http://discordapp.com/users/1000022273673138226">   Discord   </span></a>
