--- a/members/brad.html
+++ b/members/brad.html
@@ -24,8 +24,8 @@
   
    <body onload="document.body.style.opacity='1'">
    <div class="center">
-   <img src="brad.png" alt="HTML" width="350" height="450">
    <pre style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);">Welcome To My Crib.
+   <img src="brad.png" alt="HTML" width="350" height="450">
    <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%); text-align: center;"><a2>        Killa BRAD         </span></a2>
    <a>666</a>
    <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%); text-align: center;"><a href="http://discordapp.com/users/1000022273673138226">   Discord   </span></a>
@@ -111,7 +111,7 @@
       });
       document.getElementById('site').hidden=true
       function playAudio() {
-          myAudio = new Audio('felonys.mp3'); 
+          myAudio = new Audio('brads.mp3'); 
           if (typeof myAudio.loop == 'boolean')
           {
               myAudio.loop = true;
