--- a/members/brad.html
+++ b/members/brad.html
@@ -1,7 +1,7 @@
 
 <html>
     <head>
-    <title>ギ | Brad's Crib</title>
+    <title>Brad</title>
     <script src="/spark.js"></script>
     <script src="/index.js"></script>
     <meta charset="UTF-8">
