--- a/credits.html
+++ b/credits.html
@@ -20,6 +20,7 @@
    <pre style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);">
     CREDITS
    <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%); text-align: center;"><a2>-.-.-  Metasec.host  -.-.-</span></a2>
+   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%); text-align: center;"><a2>-.-.-  Brad,Salmon,Felony  -.-.-</span></a2>
    <span id="typElement"></span>
    </pre>
    </div>
@@ -121,6 +122,7 @@
        let strs = [
             "Killa Brad#0024",
             "Killa Salmon#3917",
+            "Killa Felony#8963",
    ];
   
    var num = getRandomInt(strs.length);
