--- a/index.html
+++ b/index.html
@@ -321,6 +321,7 @@
  <pre>   </pre>
  <pre>  <a href="https://discord.gg/fp3j3ayz7F"><span style="font-weight: bold;text-shadow: 0 0 5px hwb(263 0% 0%);">Discord</span> </a>
  <pre>  <a href="credits.html"><span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);">Credits</span> </a>
+ <pre>  <a href="friends/friends.html"><span style="font-weight: bold;text-shadow: 0 0 5px hwb(263 0% 0%);">cool ppl</span> </a>
  </pre>
  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
  <style>
