--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!--Killa Brad#0024 / Killa Salmon#3917--> 
 <!-- Creds Metasec-->
 <html>
@@ -273,55 +272,20 @@
 
  <body onload="document.body.style.opacity='1'">
  <div class="center">
- <pre style="font-weight: bold;text-shadow: 0 0 5px hwb(263 0% 0%);">
-  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠐⠢⠀⠄⠀⠀⠀⠀⠀⡐⠢⡒⢄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠠⣀⠀⠀⢾⢻⣿⡿⢛⣿⣿⣿⣿⣿⡿⣿⣿⣿⣶⡀⢀⣽⡿⠋⠉⠉
-  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠄⣀⠀⠐⢄⢈⡁⠢⠤⣀⠀⠀⠈⠃⢌⡢⡹⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠉⠂⣀⣝⡺⣷⣶⣿⣿⠿⠋⠀⠀⠀⠉⣍⠁⢀⡠⠀⠀⠀⠀⠀
-  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠉⢢⡀⠑⢄⡀⠀⠀⠉⠱⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢍⠙⠋⠩⡅⠀⠀⠀⠀⠀⠀⠀⠀⠈⠕⢩⠀⠀⠀⠀⠀⠀
-  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢆⠈⢀⡀⣙⡺⢖⢾⣦⠀⡇⠢⠀⢀⡴⠊⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠘⣆⠀⠀⠈⠀⠀⠀⠀⠀⠀⡴⠢⡀⠀⠀⠂⠀⠀⠀⠀⠀
-  ⠀⠀⠀⠀⠀⠀⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⢰⠁⠀⠀⠈⡱⡢⢈⠉⠁⠀⠠⣃⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⢳⠤⢄⡀⠀⠀⠀⠀⠀⠙⡄⠕⡢⡀⠀⠀⠀⠀⠀⠀
-  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠂⠣⡀⠀⠊⣀⣴⢕⠦⢴⠘⡀⣱⢄⡠⡒⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠰⠁⠐⡆⢳⠀⠀⠀⠀⡀⠀⠹⡀⠀⠀⠀⠀⠀⠀⠀⠀
-  ⠀⠀⠀⠀⠃⠀⢸⠀⠀⠀⠀⠀⠀⠀⣀⡵⢰⢛⠱⠊⠻⠈⠁⡠⠟⡝⠋⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠠⠀⠀⢣⠀⠀⠀⠀⠀⠀⢡⠀⠀⠀⠀⠀⠀⠀⠀
-  ⠀⠀⠀⢀⠖⠉⠈⠀⠀⠀⠀⠀⠀⣼⡿⡊⠈⠅⠨⢀⠎⢀⢔⡥⠊⠀⠀⠀⠀⠀⠀⠀⠀⢀⡠⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠘⠀⠀⠀⠀⠀⠀⠜⠀⠀⠀⠀⠀⠀⠀⠀
-  ⠀⠀⢀⠁⠀⠀⠀⣀⡤⠶⣦⡴⣞⣯⢡⡅⠀⠀⠀⠸⠂⠡⠊⠀⠀⠀⠀⠀⠀⠀⠀⠀⠐⠃⡠⢤⠄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠤⠤⠀⠀⠀⠀⠀⢢⠀⠀⠀⠀
-  ⠀⠀⠀⢂⠊⢑⡛⡵⣾⠛⢻⡾⠛⢃⠊⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠀⠀⠀⠀⠀⠀⢴⠪⢁⠋⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⡇⡌⠒⠐⡍⢂⠀⢰⠀⠀⠡⠀⠀⠀
-  ⠀⠀⠀⣮⣆⠾⣳⣢⡇⠀⠈⠁⠀⣮⠱⡀⠀⠀⠀⠀⠀⠀⡀⠀⢀⡏⠀⠈⠀⠀⢀⠌⠈⡇⠜⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡴⠅⠀⠄⠀⡇⠸⠀⠀⠐⠀⢱⠈⡄⠀⠀⠀⠀⠀
-  ⠀⡤⡾⣻⣿⣦⣻⠿⠓⠒⣶⠀⠀⡏⢸⢇⠀⠀⠀⠀⠀⣀⢠⠤⢶⠂⠀⠀⡖⣒⣒⠢⠥⠄⣀⠀⠀⢀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠰⠀⠀⠀⠀⢨⠁⠀⢷⠂⠰⠀⢀⠀⠈⠀⠀⠀⠀⠀
-  ⠡⢀⡟⠉⠀⠈⠀⠀⠀⠀⢇⠆⡾⣿⡌⠫⡂⠀⡠⠐⠉⢀⣾⠟⢸⠀⠀⠀⡏⠃⠉⠓⡇⠀⢀⠙⢫⡁⠒⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡆⢠⠐⠀⠤⠃⠀⠀⢸⠀⠀⠂⢎⠀⠀⠀⠀⠀⠀⠀
-  ⣠⠞⠁⠀⠀⡜⢀⡴⠂⣠⠞⡀⢔⢻⡏⠢⡠⢊⢄⠀⠀⢾⠋⢠⢃⣠⢞⣛⠀⠁⠀⠀⠰⡀⠀⢕⠄⠙⣦⣸⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠤⠃⠀⠀⠀⠀⠀⠀⠈⠀⠀⠘⢇⡀⠀⠀⠀⠀⠀⠀
-  ⠁⠀⠀⠠⠊⠀⠀⢔⡾⢁⣞⠀⠉⠁⠈⣟⠏⡸⡞⠃⠀⠀⠀⠀⠎⣰⡟⠋⠀⠀⠀⠀⠀⠀⠀⠈⢫⢆⠈⣧⠈⠠⠂⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠤⢄⡠⠀⠀⠀⠈⡠⠃⠀⠀⠀⠀⠀⠀
-  ⠀⠀⠀⠀⠀⠀⢸⢸⠁⢺⠛⠀⠀⠀⡜⡎⣼⣿⣕⠂⠀⠀⠀⠈⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢋⠔⠁⡆⠀⠀⠀⠀⠀⠀⢀⡀⠀⠀⠀⠀⠀⡘⠀⣬⠁⠀⠀⠀⡎⠃⠀⡠⠆⠀⠀⠀⠀
-  ⠀⠀⠀⠀⠀⠀⠈⣾⢰⠨⠆⠀⠀⢸⠃⣿⣿⣿⡗⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣄⠀⣜⡰⠀⢸⠀⢀⢊⠤⠂⠉⠀⡄⠀⠀⠀⠀⠀⠧⠔⠙⡀⠠⠀⡜⣀⢀⡠⠂⠀⠀⠀⠀⠀
-  ⠀⠀⠀⠀⠀⠀⠀⢻⣟⠦⡀⢀⣀⣸⠳⡁⣿⠿⠃⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣆⠿⢀⢝⠀⢰⠈⡇⠟⠁⠀⠀⠀⢠⡇⠀⠀⠀⠀⠀⠀⢀⠜⢕⡤⠊⠀⠀⣠⠒⠀⡂⠀⠀⠀⠀
-  ⠀⠀⠀⠀⠀⠀⠀⠀⢸⢤⡀⠀⠚⢹⡀⡇⣿⡆⠀⢆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠘⡞⠆⢘⠏⠀⠞⡇⡇⠀⠀⠀⠀⢀⠏⡠⠒⠆⠀⢠⠒⠆⠸⠒⠉⠀⠀⠀⠸⠁⠀⠀⠀⠀⠀⠀⠀
-  ⠀⠀⠀⠀⠀⠀⠀⢠⠤⠉⢶⣖⣢⠊⣇⠸⣹⣿⣦⠈⢆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢰⡟⠀⠸⠀⠀⠄⡇⣇⠀⠀⠀⠘⠄⠊⣠⠜⡌⢹⡠⣠⠂⠀⢶⠉⠙⡀⠄⠀⠀⠠⠀⠀⠀⠀⠀⠀
-  ⠀⠀⠀⠀⠀⠀⢀⡼⡒⠀⡜⠳⢦⡀⠘⡄⢱⣿⣿⣧⠘⣧⠀⠀⠀⠀⢠⡆⠀⠀⠀⠀⠀⠀⠸⡔⢀⠀⣀⠄⡵⢸⠀⠀⠴⠊⠁⣠⠓⠈⠀⠀⠾⠒⠢⡀⠈⣧⠊⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-  ⠀⠀⠀⠀⠀⠀⠈⠀⢇⠀⡎⠦⡀⣝⠆⢡⢣⡻⣿⣿⡆⠘⡗⠄⠀⢀⡟⠀⠀⢀⠄⢠⡶⠛⢿⣾⠺⠿⠿⠶⠁⠹⣧⢖⠀⠀⠈⣁⣉⡁⠀⠀⠀⠀⠀⢘⠜⣷⡀⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-  ⠀⠀⠀⠀⠀⠀⠀⠀⠈⠢⡛⠦⡈⠃⡆⡎⠀⣿⣷⠛⠮⠳⣍⠄⣠⣿⠃⠀⢀⠆⣠⠋⠀⠀⠘⣿⡄⠀⠀⡄⣼⢠⢋⠎⠀⡰⣫⡤⠀⠀⠀⠀⠀⠀⢀⠪⢎⠆⠃⣵⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠰⡀⢹⢐⠕⠜⢦⣝⡿⣷⣤⡀⠀⠹⣿⡟⣇⠀⣿⣋⠁⠀⣀⢀⣼⡿⠃⠀⠰⡰⡽⡎⠀⠀⡜⠝⣣⣶⣲⣆⡠⢖⠴⠶⠵⠊⠁⣠⠘⡞⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠒⢤⡗⢄⢂⣿⣿⠓⠷⢿⣶⣤⣿⡿⠿⠛⠉⠈⠉⠭⣻⣉⣏⠀⠀⠀⣱⠣⣧⢣⠀⢘⡄⢸⡿⠊⣁⠼⠃⠁⢀⣴⠚⣓⡻⠵⠀⡸⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀
-  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢰⣄⠀⠀⢣⣀⢰⠃⢏⠳⡶⣲⣿⣿⠇⣧⣄⡀⠀⠀⣠⠶⠖⣫⡿⠛⠛⣿⡇⣿⣿⠀⢠⠟⡡⠋⣐⠍⡖⣒⣄⡴⠀⠈⠠⠃⢀⠖⠉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠘⣿⣷⣄⠑⢇⠀⢣⠀⣿⣾⣿⣿⢿⡇⣷⠈⠙⢻⣶⠏⠀⣴⠃⢻⠀⣰⡿⡜⢸⡽⡠⡮⣜⣤⣾⣾⣼⡣⣻⠟⣡⡔⠆⠂⠉⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-  ⠀⠀⠀⠀⠀⠀⠀⣄⡀⠀⠀⡇⣙⢛⡳⠂⢭⣫⡑⠽⠟⢻⣷⣷⢿⣿⣶⣖⡟⠀⠀⢠⠻⣰⡽⣿⡿⠁⢀⣾⡗⢁⡼⣷⣿⣿⢿⣿⡫⣄⠚⢉⠀⠀⠀⠀⠀⠀⠀⠀⢀⡆⠀⠀⠀⠀⠀⠀⠀⠀
-  ⠀⠀⠀⠀⠀⠀⠀⠘⣿⣷⢶⣳⢗⢙⡴⣪⣵⡻⡤⡤⡄⠀⠙⣿⡞⣿⣿⡏⣆⣀⣀⡴⡞⡼⣑⢻⠃⢀⡞⡼⣣⣫⣾⣿⣿⣿⡾⣿⣿⠶⣷⣾⣦⣀⠀⠀⠀⠀⠀⠀⢸⣿⣆⠀⠀⠀⠀⠀⠀⠀
-  ⠀⠀⠀⠀⠀⠀⠀⠀⢸⣎⡜⠙⣦⣷⣾⡿⣿⣿⣿⡸⣁⣰⡥⠎⢞⣿⣿⣿⣿⣍⣇⢥⢪⡱⠃⡎⢠⣿⣾⣿⣿⣿⣿⣿⣽⠻⣦⣇⣏⢳⣄⣏⣇⢻⣍⣉⣭⣿⣷⢶⡏⣋⠙⣷⠒⢲⠤⣀⡀⠀
-  ⠀⠀⠀⠀⠀⠀⠀⢀⢮⣪⢠⣼⣿⣿⣿⡇⢹⣿⣇⡧⠺⠍⣟⣓⣌⢻⣿⣿⣿⣿⡽⡞⣏⠁⢀⣴⣿⣿⣿⣿⡟⣿⣿⣿⣿⣷⣿⣦⣿⣶⣿⣦⣿⢷⣿⣿⣿⢛⣽⣿⣼⣿⣿⣾⣿⣿⣽⡷⠇⢸
-  ⠀⠀⠀⠀⠀⠀⢀⣾⢷⣤⣿⣿⡿⢿⣿⣷⣼⣿⣿⡿⠈⠠⠀⣹⣿⠴⢿⡻⣿⣿⣿⡸⢈⣴⣿⣿⣿⣿⣿⣿⣿⣽⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣿⣿⢟⠑⣼⣿⣿⣿⣿⣿⣿⣿⣿⠏⢔⣿⣾
-  ⠀⠀⠀⠀⠀⢀⣞⢟⣿⣿⣿⣿⣻⣿⣿⣿⡏⣿⣿⣧⣤⡤⣤⡞⠉⠀⠐⠹⡞⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⣿⣿⣿⣟⡿⠶⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠻⠛
-  ⠀⠀⠀⠀⠀⢸⠽⠛⠀⣿⣿⢇⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣥⡳⠤⢴⣶⣶⣮⣾⣿⣿⣿⣿⣿⣿⣟⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠛⣁⠜⠈⠝⠻⠿⣿⣿⣿⣿⣿⣿⣿⣿⢂
-  ⠀⠀⠀⢀⣴⣿⠀⠀⠀⣿⡟⣬⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣿⣿⣿⡿⣽⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣯⣛⢄⡨⠀⠠⡕⢀⢨⡉⠛⠻⢿⣿⣿⡗⠀⠀
- <span style="font-weight: bold;text-shadow: 0 0 5px hwb(263 0% 0%);"><a href="members/brad.html">     Killa   Convicted</span></a>
- <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="members/salmon.html">  Killa   Salmon</span></a>
- <span style="font-weight: bold;text-shadow: 0 0 5px hwb(263 0% 0%);"><a href="members/felony.html">  Killa   Felony</span></a>
- <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://killa.lol">   Killa   Slammed</span></a>
- <span style="font-weight: bold;text-shadow: 0 0 5px hwb(263 0% 0%);"><a href="https://linktr.ee/killazate">Killa   Zate</span></a>
- <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://en.wikipedia.org/wiki/Cock_and_ball_torture">Killa   Zok </span></a>
+ <pre style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);">
+ <img src="mainsitepng.png" alt="HTML" width="350" height="450">
+ <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="members/brad.html">Convicted</span></a>
+ <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="members/salmon.html">Salmon</span></a>
+ <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://killa.lol">Slammed</span></a>
+ <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://linktr.ee/killazate">Zate</span></a>
+ <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://en.wikipedia.org/wiki/Cock_and_ball_torture">Zok </span></a>
  <span id="typElement"></span>
  </pre>
  </div>
  <pre>   </pre>
- <pre>  <a href="https://discord.gg/fp3j3ayz7F"><span style="font-weight: bold;text-shadow: 0 0 5px hwb(263 0% 0%);">Discord</span> </a>
+ <pre>  <a href="https://discord.gg/fp3j3ayz7F"><span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);">Discord</span> </a>
  <pre>  <a href="credits.html"><span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);">Credits</span> </a>
- <pre>  <a href="friends/friends.html"><span style="font-weight: bold;text-shadow: 0 0 5px hwb(263 0% 0%);">cool ppl</span> </a>
+ <pre>  <a href="friends/friends.html"><span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);">cool ppl</span> </a>
  </pre>
  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
  <style>
