--- a/profiles/tears.html
+++ b/profiles/tears.html
@@ -6,22 +6,22 @@
 	<link href="assets/images/ee.png" rel="icon" type="image/x-icon" />
 	<link href="ajax/libs/font-awesome/6.1.0/css/all.min.css" rel="stylesheet" />
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-	<meta content="killa.lol (@tears)" property="og:title" />
+	<meta content="Killa.lol (@tears)" property="og:title" />
 	<meta content="website" property="og:type" />
-	<meta content="https://killa.lol/tears" property="og:url" />
+	<meta content="https://Killa.lol/profiles/tears" property="og:url" />
 	<meta content="assets/images/ee.png" property="og:image" />
-	<meta content="well#0001" property="og:description" />
-  <link rel="canonical" href="https://killa.lol/tears" />
-	<meta content="#FF0000" name="theme-color">
+	<meta content="tears#1337" property="og:description" />
+  <link rel="canonical" href="https://Killa.lol/profiles/tears" />
+	<meta content="#000" name="theme-color">
 	<link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/up.css" />
   <link rel="stylesheet" href="css/chop.css" />
   <link href="css/aaaa.css" rel="stylesheet"> 
   <link rel="icon" href="assets/images/ee.png" type="image/png" sizes="16x16 32x32 64x64">
   <script disable-devtool-auto src='js/disable-devtool.min.js'></script>
-    <meta property="twitter:url" content="killa.lol/profiles/tears">
-    <meta property="twitter:title" content="killa.lol (@tears)">
-    <meta property="twitter:description" content="well#0001">
+    <meta property="twitter:url" content="Killa.lol/tears">
+    <meta property="twitter:title" content="Killa.lol (@tears)">
+    <meta property="twitter:description" content="tears#1337">
     <link href="https://fonts.cdnfonts.com/css/common-pixel" rel="stylesheet">
     <style>@import url('https://fonts.cdnfonts.com/css/common-pixel');</style>
     <link href="https://fonts.cdnfonts.com/css/pf-tempesta-five" rel="stylesheet">
@@ -47,8 +47,8 @@
         </div> 
 
 <div id="enter"><b class="begin"><pre class="text"></pre>
-<pre class="killa">                                            
-ENTER
+<pre class="Killa">                                            
+ 
 </pre></b></div>
 <div id="main">
   <style>
@@ -77,7 +77,7 @@ ENTER
 		height: 100%;
 		width: 100%;
 		place-items: center;
-		background: linear-gradient(315deg, #000000 0%, #161616 74%);
+		background: linear-gradient(315deg, black 0%,black 74%);
 	}
 	.title {
 		text-align: center;
@@ -86,7 +86,7 @@ ENTER
 		margin-top: 7px;
 	}
 	.avatar {
-		border: 1px solid #fff;
+		border: 0px solid #ca1111;
 		height: 200px;
 		width: 200px;
 		object-fit: cover;
@@ -106,7 +106,7 @@ ENTER
 		cursor: pointer;
 		box-shadow: 0px 0px 0px rgba(255, 255, 255, 255);
 		transition: all 0.3s ease-out;
-		color: black;
+		color: white;
 	}
 	.wrapper .button:hover {
 		width: 200px;
@@ -148,17 +148,18 @@ ENTER
 	--------------------------------------------
 	*/
 	.wrapper .button.discord:hover .icon {
-		background: #5865F2;
 	}
 	.wrapper .button.discord span {
 		color: #5865F2;
-	}
+	}	background: #5865F2;
+	
 	.wrapper .button.github:hover .icon {
 		background: #333;
 	}
 	.wrapper .button.github span {
 		color: #333;
 	}
+
 	.wrapper .button.tiktok:hover .icon {
 		background: #000000;
 	}
@@ -288,40 +289,28 @@ ENTER
 		cursor: pointer;
 	}
   </style>
-<body style="background-image: url('https://cdn.discordapp.com/attachments/1055593061947813959/1055616218377224302/christma.sh.gif'); background-size: cover;">
+<body style="background-image: url('https://cdn.discordapp.com/attachments/853029497266503710/1058763565017858068/dancing_mobile.gif'); background-size: cover;">
       <script src="js/spooky.js"></script>
 <div class="title">
 	<div class="title-img">
-		<img alt="Avatar" class="avatar" src="https://cdn.discordapp.com/attachments/1060663915098419282/1060702064465944697/3205c72ec259cc1c06a5f884d98f1ebb.png">
+		<img alt="Avatar" class="avatar" src="https://cdn.discordapp.com/attachments/1060663915098419282/1060702653379793008/stary2k.png">
 	</div>
-<center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'Roboto', sans-serif; color: #ffffff; text-align: center;">tears</h1><br><br>
+<center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'Roboto', sans-serif; color: #fff; text-align: center;">Tears</h1><br><br>
 								  <div class="badge">
 									<img src="main.png" style="width: 20px; height: 20px;" alt="ALPHA">
-									<span class="badge-tooltiptext">beta biolink</span>
+									<span class="badge-tooltiptext">ALPHA USER</span>
 								  </div>
-                  <div class="badge">
-									<img src="https://cdn.discordapp.com/attachments/1060663915098419282/1060702653379793008/stary2k.png" style="width: 20px; height: 20px;" alt="TREE">
-									<span class="badge-tooltiptext">tears</span>
 								  </center></div>
-								  </center><!-- Cloudflare Pages Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "fc9b743988b74d5b8c1ce741cbf59475"}'></script><!-- Cloudflare Pages Analytics --></div>
-	<center><p class="quote" style="color: #ffffff; text-align: center;">
-		tears#1337 
+	<center><p class="quote" style="color: #fff; text-align: center;">
+        Discord - tears#1337
 	</p></center>
   <br>
 	<!-- FOLLOWING -->
-</div>
-<center><div class="wrapper">
-						  <div class="button discord" onclick="window.open('https://discord.gg/adinross', '_blank');">
-							<div class="icon">
-								<i class="fab fa-discord" aria-hidden="true"></i>
-							</div>
-							<span>discord</span>
-						  </div>
-</div></center>
-
-            <div class="footer" style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #ffffff;">
-                <h4><a href="https://killa.lol"
-                              style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #FFC0CB;">killa.lol</a>
+<!-- Cloudflare Pages Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "fc9b743988b74d5b8c1ce741cbf59475"}'></script><!-- Cloudflare Pages Analytics --></div>
+<br><br>
+            <div class="footer" style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #FFC0CB;">
+                <h4><a href=""
+                              style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #FFC0CB;">Killa.lol</a>
                 </h4>
             </div>          
           
@@ -345,7 +334,7 @@ ENTER
         <script type="text/javascript">
         ;(function(){
         // (QUOTED STRING)
-        var msg = "T A X";
+        var msg = "M I K";
 
         var size = 12;
         // Set both to 1 for plain circle, set one of them to 2 for oval
