--- a/profiles/tears.html
+++ b/profiles/tears.html
@@ -289,11 +289,11 @@
 		cursor: pointer;
 	}
   </style>
-<body style="background-image: url('https://cdn.discordapp.com/attachments/853029497266503710/1058763565017858068/dancing_mobile.gif'); background-size: cover;">
+<body style="background-image: url('https://media.discordapp.net/attachments/1059446368713834546/1059446423592116274/adadadadad.gif'); background-size: cover;">
       <script src="js/spooky.js"></script>
 <div class="title">
 	<div class="title-img">
-		<img alt="Avatar" class="avatar" src="https://cdn.discordapp.com/attachments/1060663915098419282/1060702653379793008/stary2k.png">
+		<img alt="Avatar" class="avatar" src="https://cdn.discordapp.com/attachments/1060663915098419282/1060702064465944697/3205c72ec259cc1c06a5f884d98f1ebb.png">
 	</div>
 <center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'Roboto', sans-serif; color: #fff; text-align: center;">Tears</h1><br><br>
 								  <div class="badge">
@@ -310,7 +310,7 @@
 <br><br>
             <div class="footer" style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #FFC0CB;">
                 <h4><a href=""
-                              style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #FFC0CB;">Killa.lol</a>
+                              style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #FFC0CB;"></a>
                 </h4>
             </div>          
           
