--- a/profiles/tears.html
+++ b/profiles/tears.html
@@ -334,7 +334,7 @@
         <script type="text/javascript">
         ;(function(){
         // (QUOTED STRING)
-        var msg = "M I K";
+        var msg = "T E A R S";
 
         var size = 12;
         // Set both to 1 for plain circle, set one of them to 2 for oval
