--- a/profiles/tears.html
+++ b/profiles/tears.html
@@ -298,7 +298,7 @@
 <center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'Roboto', sans-serif; color: #fff; text-align: center;">Tears</h1><br><br>
 								  <div class="badge">
 									<img src="main.png" style="width: 20px; height: 20px;" alt="ALPHA">
-									<span class="badge-tooltiptext">ALPHA USER</span>
+									<span class="badge-tooltiptext">Beta</span>
 								  </div>
 								  </center></div>
 	<center><p class="quote" style="color: #fff; text-align: center;">
