--- a/profiles/killhouse.html
+++ b/profiles/killhouse.html
@@ -10,9 +10,9 @@
 	<meta content="website" property="og:type" />
 	<meta content="https://Killa.lol/profiles/killhouse" property="og:url" />
 	<meta content="assets/images/ee.png" property="og:image" />
-	<meta content="killhouse#001" property="og:description" />
+	<meta content="killhouse#0001" property="og:description" />
   <link rel="canonical" href="https://Killa.lol/profiles/killhouse" />
-	<meta content="#000" name="theme-color">
+	<meta content="#0000" name="theme-color">
 	<link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/up.css" />
   <link rel="stylesheet" href="css/chop.css" />
@@ -302,10 +302,10 @@
 								  </div>
 								  </center></div>
 	<center><p class="quote" style="color: #fff; text-align: center;">
-    <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://killa-brad.doxedme.lol/5RYDn5nl7">Discord</span></a>
-    <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://twitter.com/killhousee">Twitter</span></a>
-    <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://www.youtube.com/channel/UCEbXZB1UMJo8upYTklxi6AQ">Youtube</span></a>
-    <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://t.me/kkillhouse">Telegram</span></a>
+    <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://killa-brad.doxedme.lol/5RYDn5nl7">Discord || </span></a>
+    <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://twitter.com/killhousee">Twitter || </span></a>
+    <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://www.youtube.com/channel/UCEbXZB1UMJo8upYTklxi6AQ">Youtube || </span></a>
+    <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://t.me/kkillhouse">Telegram || </span></a>
     <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://www.tiktok.com/@kkillhousee">TikTok</span></a>
 	</p></center>
   <br>
