--- a/profiles/jada.html
+++ b/profiles/jada.html
@@ -289,7 +289,7 @@
 		cursor: pointer;
 	}
   </style>
-<body style="background-image: url('https://media.discordapp.net/attachments/915616321021022278/915616803709911060/Mint_4.gif'); background-size: cover;">
+<body style="background-image: url('https://tenor.com/view/ankoku-gif-18404352'); background-size: cover;">
       <script src="js/spooky.js"></script>
 <div class="title">
 	<div class="title-img">
