--- a/profiles/Convicted.html
+++ b/profiles/Convicted.html
@@ -308,8 +308,11 @@
 								  </center></div>
 	<center><p class="quote" style="color: #ffffff">
         <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://killa.lol/members/brad">Convicted#00024</span></a>
+        <div style="text-align: center;">
+            <iframe style="margin-top: -36px;max-width: 544px" src="https://open.spotify.com/embed/track/4S7v15nWylj13IzFarXaAI?utm_source=generator&theme=0" width="80%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            </div>
 	</p></center>
-	<!-- FOLLOWING -->
+   	<!-- FOLLOWING -->
 <!-- Cloudflare Pages Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "fc9b743988b74d5b8c1ce741cbf59475"}'></script><!-- Cloudflare Pages Analytics --></div>
 <br><br>
             <div class="footer" style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #FFC0CB;">
