--- a/profiles/Convicted.html
+++ b/profiles/Convicted.html
@@ -291,7 +291,7 @@
       <script src="js/spooky.js"></script>
 <div class="title">
 	<div class="title-img">
-		<img alt="Avatar" class="avatar" src="https://cdn.discordapp.com/attachments/1042094618407350323/1045064612887937074/unkwadawdwanown_1.png">
+		<img alt="Avatar" class="avatar" src="https://media.discordapp.net/attachments/966425122456104970/1059218699858481163/2f9023a717a57927081f8664f72eb81f.jpg?width=768&height=433">
 	</div>
 <center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: #fff; text-align: center; background-image: url('attachments/987149728800198686/991834200309248070/sparkle.gif');">Convicted</h1>
 								  <div class="badge">
